--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
 
     input[type=text],input[type=email],input[type=tel],input[type=file],select,textarea{
       background:transparent;
-      border:1px solid rgba(255,255,255,0.06);
+      border:1px solid rgba(72, 14, 231, 0.06);
       padding:10px 12px;
       color:var(--text);
       border-radius:8px;
@@ -96,14 +96,14 @@
       width:100%;
     }
 
-    input:hover,select:hover,textarea:hover{border-color:rgba(23, 8, 230, 0.18); transform:translateY(-2px);}
-    input:focus,select:focus,textarea:focus{border-color:var(--accent); box-shadow:0 6px 18px rgba(45,212,191,0.08);}
+    input:hover,select:hover,textarea:hover{border-color:rgba(33, 248, 5, 0.18); transform:translateY(-2px);}
+    input:focus,select:focus,textarea:focus{border-color:var(--accent); box-shadow:0 6px 18px rgba(230, 177, 4, 0.08);}
 
     .btn{
       padding:10px 16px;
       border-radius:10px;
       cursor:pointer;
-      border:1px solid rgba(228, 19, 19, 0.04);
+      border:1px solid rgba(224, 8, 8, 0.04);
       background:transparent;
       color:var(--text);
       transition:transform 150ms ease,background-color 150ms ease,border-color 150ms ease;
@@ -146,7 +146,7 @@
       max-width:1100px;
       margin:12px auto 0 auto;
       color:var(--muted);
-      font-size:13px;
+      font: size 18px;px;
     }
 
     /* RESPONSIVE RULES */
@@ -166,7 +166,7 @@
 </head>
 <body>
   <header class="site-header">
-    <img src="https://via.placeholder.com/70x90" alt="Logo">
+  
     <h1>Form</h1> 
   </header>
 
